// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`describe when the TicketList Component is given showAddTicketDialog as false TicketList should show the addTicketDialog open as false 1`] = `
<div>
  <RaisedButton
    disabled={false}
    fullWidth={false}
    label="Add Ticket"
    labelPosition="after"
    onClick={[Function]}
    primary={false}
    secondary={false}
  />
  <Table
    allRowsSelected={false}
    fixedFooter={true}
    fixedHeader={true}
    height="inherit"
    multiSelectable={false}
    selectable={true}
  >
    <TableHeader
      adjustForCheckbox={true}
      displaySelectAll={true}
      enableSelectAll={true}
      selectAllSelected={false}
    >
      <TableRow
        displayBorder={true}
        hoverable={false}
        hovered={false}
        selectable={true}
        striped={false}
      >
        <TableHeaderColumn>
          Ticket
        </TableHeaderColumn>
        <TableHeaderColumn>
          3/22
        </TableHeaderColumn>
        <TableHeaderColumn>
          3/23
        </TableHeaderColumn>
        <TableHeaderColumn>
          3/26
        </TableHeaderColumn>
      </TableRow>
    </TableHeader>
    <TableBody
      allRowsSelected={false}
      deselectOnClickaway={true}
      displayRowCheckbox={true}
      multiSelectable={false}
      preScanRows={true}
      selectable={true}
      style={Object {}}
    >
      <TableRow
        displayBorder={true}
        hoverable={false}
        hovered={false}
        selectable={true}
        striped={false}
      >
        <TableRowColumn
          hoverable={false}
        >
          <TextField
            defaultValue="OVC-523"
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={false}
            multiLine={false}
            rows={1}
            type="text"
            underlineShow={true}
          />
        </TableRowColumn>
        <TableRowColumn
          hoverable={false}
        >
          <TextField
            defaultValue="5"
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={false}
            multiLine={false}
            rows={1}
            type="text"
            underlineShow={true}
          />
        </TableRowColumn>
        <TableRowColumn
          hoverable={false}
        >
          <TextField
            defaultValue="3"
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={false}
            multiLine={false}
            rows={1}
            type="text"
            underlineShow={true}
          />
        </TableRowColumn>
        <TableRowColumn
          hoverable={false}
        >
          <TextField
            defaultValue="0"
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={false}
            multiLine={false}
            rows={1}
            type="text"
            underlineShow={true}
          />
        </TableRowColumn>
      </TableRow>
      <TableRow
        displayBorder={true}
        hoverable={false}
        hovered={false}
        selectable={true}
        striped={false}
      >
        <TableRowColumn
          hoverable={false}
        >
          <TextField
            defaultValue="ticketTitle"
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={false}
            multiLine={false}
            rows={1}
            type="text"
            underlineShow={true}
          />
        </TableRowColumn>
        <TableRowColumn
          hoverable={false}
        >
          <TextField
            defaultValue="5"
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={false}
            multiLine={false}
            rows={1}
            type="text"
            underlineShow={true}
          />
        </TableRowColumn>
        <TableRowColumn
          hoverable={false}
        >
          <TextField
            defaultValue="3"
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={false}
            multiLine={false}
            rows={1}
            type="text"
            underlineShow={true}
          />
        </TableRowColumn>
        <TableRowColumn
          hoverable={false}
        >
          <TextField
            defaultValue="0"
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={false}
            multiLine={false}
            rows={1}
            type="text"
            underlineShow={true}
          />
        </TableRowColumn>
      </TableRow>
    </TableBody>
  </Table>
  <Connect(AddTicketDialog)
    onRequestClose={[Function]}
    open={false}
  />
</div>
`;

exports[`describe when the TicketList Component is given showAddTicketDialog as true TicketList should show the addTicketDialog open as true 1`] = `
<div>
  <RaisedButton
    disabled={false}
    fullWidth={false}
    label="Add Ticket"
    labelPosition="after"
    onClick={[Function]}
    primary={false}
    secondary={false}
  />
  <Table
    allRowsSelected={false}
    fixedFooter={true}
    fixedHeader={true}
    height="inherit"
    multiSelectable={false}
    selectable={true}
  >
    <TableHeader
      adjustForCheckbox={true}
      displaySelectAll={true}
      enableSelectAll={true}
      selectAllSelected={false}
    >
      <TableRow
        displayBorder={true}
        hoverable={false}
        hovered={false}
        selectable={true}
        striped={false}
      >
        <TableHeaderColumn>
          Ticket
        </TableHeaderColumn>
        <TableHeaderColumn>
          3/22
        </TableHeaderColumn>
        <TableHeaderColumn>
          3/23
        </TableHeaderColumn>
        <TableHeaderColumn>
          3/26
        </TableHeaderColumn>
      </TableRow>
    </TableHeader>
    <TableBody
      allRowsSelected={false}
      deselectOnClickaway={true}
      displayRowCheckbox={true}
      multiSelectable={false}
      preScanRows={true}
      selectable={true}
      style={Object {}}
    >
      <TableRow
        displayBorder={true}
        hoverable={false}
        hovered={false}
        selectable={true}
        striped={false}
      >
        <TableRowColumn
          hoverable={false}
        >
          <TextField
            defaultValue="OVC-523"
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={false}
            multiLine={false}
            rows={1}
            type="text"
            underlineShow={true}
          />
        </TableRowColumn>
        <TableRowColumn
          hoverable={false}
        >
          <TextField
            defaultValue="5"
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={false}
            multiLine={false}
            rows={1}
            type="text"
            underlineShow={true}
          />
        </TableRowColumn>
        <TableRowColumn
          hoverable={false}
        >
          <TextField
            defaultValue="3"
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={false}
            multiLine={false}
            rows={1}
            type="text"
            underlineShow={true}
          />
        </TableRowColumn>
        <TableRowColumn
          hoverable={false}
        >
          <TextField
            defaultValue="0"
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={false}
            multiLine={false}
            rows={1}
            type="text"
            underlineShow={true}
          />
        </TableRowColumn>
      </TableRow>
      <TableRow
        displayBorder={true}
        hoverable={false}
        hovered={false}
        selectable={true}
        striped={false}
      >
        <TableRowColumn
          hoverable={false}
        >
          <TextField
            defaultValue="ticketTitle"
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={false}
            multiLine={false}
            rows={1}
            type="text"
            underlineShow={true}
          />
        </TableRowColumn>
        <TableRowColumn
          hoverable={false}
        >
          <TextField
            defaultValue="5"
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={false}
            multiLine={false}
            rows={1}
            type="text"
            underlineShow={true}
          />
        </TableRowColumn>
        <TableRowColumn
          hoverable={false}
        >
          <TextField
            defaultValue="3"
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={false}
            multiLine={false}
            rows={1}
            type="text"
            underlineShow={true}
          />
        </TableRowColumn>
        <TableRowColumn
          hoverable={false}
        >
          <TextField
            defaultValue="0"
            disabled={false}
            floatingLabelFixed={false}
            fullWidth={false}
            multiLine={false}
            rows={1}
            type="text"
            underlineShow={true}
          />
        </TableRowColumn>
      </TableRow>
    </TableBody>
  </Table>
  <Connect(AddTicketDialog)
    onRequestClose={[Function]}
    open={true}
  />
</div>
`;
